# yas

./: Cargo.toml  LICENSE  README.md  README.org  build.sh  list_of_projects_i_had_to_have_a_look_at_because_there_is_SHIT_documentation
src/: hash.rs  main.rs  tui.rs
