[package]
name = "yas"
version = "0.1.0"
authors = ["ur name <legendofmiracles@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.10"
pwhash = {path = "/home/legendofmiracles/programming/rust/pwhash"}
rpassword = "5.0"
