[package]
name = "yas"
version = "0.1.0"
authors = ["ur name <legendofmiracles@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.10"
pwhash = ""
rpassword = "5.0"
cursive = {optional = true, version = ""}

[features]
tui = ["cursive"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
