[package]
name = "yas"
version = "0.1.1"
authors = ["ur name <legendofmiracles@protonmail.com>"]
edition = "2018"
description = "A sudo replacement, written in rust"
homepage = "https://github.com/alx365/yas"
repository = "https://github.com/alx365/yas"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.10"
pwhash = "0.3.1"
rpassword = "5.0"
cursive = {optional = true, version = "0.15.0"}

[features]
tui = ["cursive"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
